fixed: added a h1 selector on style.css so can add text align center

--- a/style.css
+++ b/style.css
@@ -8,3 +8,7 @@ li {
     margin: 8px 30px;
     display: inline-block;
 }
+
+h1 {
+    text-align: center;
+}
